# bsapacker

./: CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
lib/: DirectXTex.lib
src/: ArchiveAutoService.cpp  ArchiveBuilderFactory.cpp  ArchiveBuilderHelper.cpp  ArchiveNameService.cpp  ArchiveNameService.h  BsaPacker.cpp  BsaPacker.h  BsaPackerWorker.cpp  CMakeLists.txt  DummyPluginServiceFactory.cpp  GeneralArchiveBuilder.cpp  HideLooseAssetService.cpp  ModContext.cpp  ModDtoFactory.cpp  NewVegasDummyPluginService.cpp  NexusId.h  OblivionDummyPluginService.cpp  OverrideFileService.cpp  OverrideFileService.h  SettingsService.cpp  SettingsService.h  StarfieldDummyPluginService.cpp  StarfieldDummyPluginService.h  TextureArchiveBuilder.cpp  TexturelessArchiveBuilder.cpp  bsa_packer_en.ts
src/bsapacker/: ArchiveAutoService.h  ArchiveBuilderHelper.h  GeneralArchiveBuilder.h  IArchiveAutoService.h  IArchiveBuilderHelper.h  IArchiveNameService.h  IOverrideFileService.h  TextureArchiveBuilder.h  TexturelessArchiveBuilder.h
tests/: CMakeLists.txt  MockOrganizer.h
